# auction_service

./: .gitignore  Dockerfile  README.md  alembic.ini  alembic_upgrade.py  config.ini  docker-compose.yaml  pyproject.toml  sample.env  start.sh  websocket_client.py
app/: db.py  db_service.py  main.py  model.py  models.py  schemas.py
app/account/: account_service.py  auth_context.py  models.py  routers.py  schemas.py
app/auction/: __init__.py  auction_service.py  lot_websocket_manager.py  models.py  routers.py  schemas.py  services.py
app/config/: __init__.py  base.py  prod.py
app/migrations/: env.py
app/migrations/versions/: 00c0fd1ac574_created_user_model.py  94bc511d51d8_added_relationship_between_bid_and_user.py  9ee1ad08f03e_added_unique_constraint_for_bid_on_lot_.py  aa12fdcfdf25_added_highest_price_to_lot.py  aa28f1f9a9cd_initial_migration.py
app/routers/: auction_router.py
app/services/: auction_service.py
docker/: Dockerfile  Dockerfile-mysql  Dockerfile-nginx  docker-compose.override-mysql.yml  docker-compose.override-postgres.yml  docker-compose.yaml
mysql/: init.sql
nginx/: nginx.conf
src/: db.py  main.py  model.py
src/account/: account_service.py  auth_context.py  models.py  routers.py  schemas.py
src/auction/: auction_service.py  models.py  routers.py
src/config/: __init__.py  base.py  dev.py  prod.py
src/config/database/: __init__.py  base_database.py  mssql_database.py  mysql_database.py  postgres_database.py  (+1 more)
src/core/: db.py  service.py
src/etl/: csv.py  routers.py
src/migrations/: env.py
templates/: etl.html
(+4 files in other folders)
